--- a/frontend/src/componentes/Rodape/Rodape.css
+++ b/frontend/src/componentes/Rodape/Rodape.css
@@ -6,6 +6,10 @@ hr {
     background-color: var(--branco);
     padding: 1em;
     background: #F9F9F9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .lista-rodape {
